# HackatonInterledger2025

./: 7  README.md  app.py
Midonacion/: App.tsx  app.json  package-lock.json  package.json
Midonacion/.expo/types/: router.d.ts
Midonacion/app/: LoginScreen.tsx  _layout.tsx
Midonacion/app/(auth)/: LoginScreen.tsx  _layout.tsx
Midonacion/app/(tabs)/: Auth.tsx  CampaignsList.tsx  CreateCampaign.tsx  _layout.tsx  create-support.tsx  index.tsx  other-donations.tsx  received-donations.tsx  user.tsx  validate.tsx
Midonacion/app/context/: AuthContext.tsx
backend/: Cargo.toml  bd.db  go.mod  go.sum  main.go
backend/chatbot/: client.go
backend/handler/: campaign.go  chat.go  donation.go  payment.go  user.go
backend/model/: campaign.go  user.go
backend/openpayments/: aaaaa  client.go
backend/openpayments/final/: final.go
backend/store/: campaign.go  db.go  user.go
chatbot/: .gitignore  app.py  pyproject.toml
chatbot/chroma_db_data/: chroma.sqlite3
chatbot/cliente/: go.mod
chatbot/templates/: index.html
chroma_db_data/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-limpio/: index.html  package-lock.json  package.json  vite.config.ts
frontend-limpio/src/: App.tsx  index.css
frontend-limpio/src_og/: App.tsx
frontend/src/: App.css  App.tsx
frontendV3/: index.html  tailwind.config.js
frontendV3/src/: App.css  App.tsx  index.css
templates/: index.html
test/: go.mod  go.sum  main.go  private.key
test/chatbot/: .env  app.py  lalal  pyproject.toml
(+20 files in other folders)
